# dp_fusion

./: README.md
abb_camera_calib_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abb_camera_calib_moveit_config/config/: abb_irb.srdf  controllers.yaml  fake_controllers.yaml
abb_camera_calib_moveit_config/launch/: abb_irb_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
abb_camera_simulation/config/: abb_irb_control.yaml
abb_camera_simulation/launch/: abb_gazebo.launch  camera_sim.launch
abb_camera_simulation/urdf/: abb_irb4600_60_205.gazebo  abb_irb4600_60_205_macro.xacro
ax_bx_calibration/: CMakeLists.txt  README.md  package.xml
ax_bx_calibration/include/ax_bx_calibration/: ceres_extensions.h
ax_bx_calibration/inputs_examples/: CalibrationTransformationPoints.txt  CalibrationTransformationPoints_sim.txt  data.txt  transformationmatrixes.txt
ax_bx_calibration/launch/: ax_bx_calibration.launch  static_publisher.launch
ax_bx_calibration/outputs/: CalibrationOutput.txt  output_data.txt
ax_bx_calibration/src/: calibration_node.cpp  camera_data_to_points.cpp
ax_bx_calibration/urdf/: transform_test.urdf
dataset_calib_abb4600/: Calib_patern_transformations.txt  CalibrationTransformation.txt
point_cloud_listner/: CMakeLists.txt  package.xml
point_cloud_listner/src/: cloud_meshing.cpp  fusion_test.cpp  pcl_listener.cpp
tf_logger/: CMakeLists.txt  package.xml
tf_logger/launch/: abb_logger.launch
tf_logger/src/: ax_bx_calibration_data_logger.cpp  tf_logger.cpp  tf_logger_sim.cpp
