<?xml version="1.0"?>
<package>
  <name>ax_bx_calibration</name>
  <version>1.0.0</version>
  <description>The ax_bx_calibration package</description>

  <maintainer email="kohut@photoneo.com">controller</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
